Format chapter 5 of willpower and format B vitamines and CO_2

--- a/nutrition/chapter12.tex
+++ b/nutrition/chapter12.tex
@@ -85,7 +85,7 @@
 \paragraph{Сьвятло і мэтабалічная гнуткасьць.}
 Сьвятло аказвае наўпроставае ўзьдзеяньне на галоўны цэнтар кіраваньня цыркаднымі рытмамі\index{цыркадныя рытмы} ў~мозгу~--- супрахіязматычнае ядро\index{супрахіязматычнае ядро} гіпаталямусу\index{гіпаталямус}. Ёсьць 4 асноўныя правілы нармалізацыі сьветлавога рэжыму, зьвязаныя з~часам дня. Такім чынам, ранішняе сьвятло~--- вельмі важнае, нават паўгадзіны яркага сьвятла дапамогуць узбадзёрыцца, павысіць адчувальнасьць да інсуліну\index{інсулін}, палепшыць сон. Найлепшае сьвятло~--- сонечнае з~ультрафіялетам. Калі раніцай у~вас сьвятла мала~--- тае бяды: можна выкарыстоўваць прылады для фотатэрапіі, пажадана з~добрым спэктрам і яркасьцю ня менш за 10 000 люкс.
 
-Днём таксама важна бываць на вуліцы з~розных прычын: чым болей дзённага сьвятла, тым вышэйшы ўзровень сэратаніну\index{сэратанін}, а~значыць, і самаадчуваньня, яркае сьвятло прытупляе апэтыт, сонечнае сьвятло спрыяе назапашваньню вітаміну Д. Аднак улетку і ў~гарачых краінах неабходна датрымлівацца і фотаабароны для прадухіленьня пашкоджаньня скуры. Увечары варта спыніцца на няяркім расьсеяным жаўтлявым сьвятле, ідэальна ад лямпаў напальваньня. Сьвятлодыёдныя крыніцы (смартфоны, тэлевізары, лямпы) варта абмежаваць. Як варыянт~--- можна выкарыстоўваць e-ink-рыдары для чытаньня электронных кніг або акуляры, якія блякуюць сінюю частку спэктру. Уначы~--- поўная цемра без кампрамісаў. Яна можа быць дасягнутая маскай для сну, шчыльнымі шторамі, заклейваньнем усіх магчымых індыкатараў і сьвятлодыёдаў.
+Днём таксама важна бываць на вуліцы з~розных прычын: чым болей дзённага сьвятла, тым вышэйшы ўзровень сэратаніну\index{сэратанін}, а~значыць, і самаадчуваньня, яркае сьвятло прытупляе апэтыт, сонечнае сьвятло спрыяе назапашваньню вітаміну D. Аднак улетку і ў~гарачых краінах неабходна датрымлівацца і фотаабароны для прадухіленьня пашкоджаньня скуры. Увечары варта спыніцца на няяркім расьсеяным жаўтлявым сьвятле, ідэальна ад лямпаў напальваньня. Сьвятлодыёдныя крыніцы (смартфоны, тэлевізары, лямпы) варта абмежаваць. Як варыянт~--- можна выкарыстоўваць e-ink-рыдары для чытаньня электронных кніг або акуляры, якія блякуюць сінюю частку спэктру. Уначы~--- поўная цемра без кампрамісаў. Яна можа быць дасягнутая маскай для сну, шчыльнымі шторамі, заклейваньнем усіх магчымых індыкатараў і сьвятлодыёдаў.
 
 \tipbox{Тэмпэратура ўплывае на якасьць сну: у~прахалоднай спальні сон глыбейшы. Дасьледаваньні высьветлілі, што 2 гадзіны ў~дзень пры тэмпэратуры 17\,°C прыводзяць да страты дадатковых 110 ккал цягам тыдня, а~да канца другога тыдня ўдзельнікі губляюць ужо 290 ккал! 10-хвіліннае знаходжаньне на холадзе штодня прыводзіць да страты 3--4 кіляграмаў на месяц.}
 
