--- a/nutrition/chapter14.tex
+++ b/nutrition/chapter14.tex
@@ -93,5 +93,5 @@
 \tipbox{Спэцыі ўтрымоўваюць нікчэмна малую колькасьць калёрыяў, пры гэтым неймаверна шмат карысных спалучэньняў. Дадавайце ў~ежу чырвоны перац, размарын, куркуму, ляўровы ліст, аніс, кардамон, шафран.}
 
 \paragraph{Найбольш частыя дэфіцыты.}
-Найбольш частымі дэфіцытамі зьяўляюцца дэфіцыт амэга-3 тлустых кіслот (дадаткі або тлустая марская рыба два разы на тыдзень, кантроль па амэга-індэксе), дэфіцыт сэлену\index{сэлен} (лепш хелатные формы дабавак або морапрадукты, часнык, бразільскі гарэх), дэфіцыт вітаміну D (бываць часьцей апоўдні на сонцы, есьці больш рыбы, яек або дабаўкі ў~высокіх дозах пад лябараторным кантролем), дэфіцыт жалеза (мясныя прадукты або хелатные дабаўкі, кантроль па профілі жалеза ў~крыві: жалеза, ферытын\index{ферытын}, трансфэрын), дэфіцыт цынку (больш мяса і рыбы або дабаўкі), дэфіцыт магнію, дэфіцыт вітамінаў В9 і В12 (лепш прымаць у~выглядзе мэтыльных формаў, мэтылфалат і мэтылкабаламін, кантроль па ўзроўні В9, В12, гомацыстэіну), дэфіцыт ёду (цяпер сустракаецца ўсё радзей).
+Найбольш частымі дэфіцытамі зьяўляюцца дэфіцыт амэга-3 тлустых кіслот (дадаткі або тлустая марская рыба два разы на тыдзень, кантроль па амэга-індэксе), дэфіцыт сэлену\index{сэлен} (лепш хелатные формы дабавак або морапрадукты, часнык, бразільскі гарэх), дэфіцыт вітаміну D (бываць часьцей апоўдні на сонцы, есьці больш рыбы, яек або дабаўкі ў~высокіх дозах пад лябараторным кантролем), дэфіцыт жалеза (мясныя прадукты або хелатные дабаўкі, кантроль па профілі жалеза ў~крыві: жалеза, ферытын\index{ферытын}, трансфэрын), дэфіцыт цынку (больш мяса і рыбы або дабаўкі), дэфіцыт магнію, дэфіцыт вітамінаў B\textsubscript{9} і B\textsubscript{12} (лепш прымаць у~выглядзе мэтыльных формаў, мэтылфалат і мэтылкабаламін, кантроль па ўзроўні B\textsubscript{9}, B\textsubscript{12}, гомацыстэіну), дэфіцыт ёду (цяпер сустракаецца ўсё радзей).
 
