--- a/nutrition/chapter15.tex
+++ b/nutrition/chapter15.tex
@@ -21,7 +21,7 @@
 Дасьледчыкі ўвялі шэраг індэксаў разнастайнасьці дыеты, якія карэлююць з~паказчыкамі здароўя. Чым размаіцейшы рацыён, тым людзі жывуць даўжэй і менш хварэюць. Прынцып «есьці самы карысны прадукт» не працуе, дыета павінна зьмяшчаць якасныя і карысныя прадукты розных тыпаў, каб быць здаровай і збалянсаванай.
 
 \paragraph{Разнастайнасьць і забесьпячэньне.}
-Разнастайнасьць харчаваньня мусіць быць дастатковая, каб забясьпечыць арганізм неабходным узроўнем калёрыяў і незаменных нутрыентаў, а~таксама поўным наборам вітамінаў, мікраэлемэнтаў, макраэлемэнтаў і інш. Часам дэфіцыт зьвязаны зь нізкім утрыманьнем асобных элемэнтаў у~глебе (сэлен\index{сэлен}, ёд), часам~--- з~выкарыстаньнем абмежавальных дыетаў. Так, вэганства вядзе да дэфіцыту жалеза, цынку, вітаміну В12, вітаміну D і яшчэ шэрагу спалучэньняў. Шэраг дэфіцытных у~нашай дыеце спалучэньняў і спосабы іх папаўненьня пазначаныя ў~канцы гэтага разьдзелу.
+Разнастайнасьць харчаваньня мусіць быць дастатковая, каб забясьпечыць арганізм неабходным узроўнем калёрыяў і незаменных нутрыентаў, а~таксама поўным наборам вітамінаў, мікраэлемэнтаў, макраэлемэнтаў і інш. Часам дэфіцыт зьвязаны зь нізкім утрыманьнем асобных элемэнтаў у~глебе (сэлен\index{сэлен}, ёд), часам~--- з~выкарыстаньнем абмежавальных дыетаў. Так, вэганства вядзе да дэфіцыту жалеза, цынку, вітаміну B\textsubscript{12}, вітаміну D і яшчэ шэрагу спалучэньняў. Шэраг дэфіцытных у~нашай дыеце спалучэньняў і спосабы іх папаўненьня пазначаныя ў~канцы гэтага разьдзелу.
 
 \paragraph{Разнастайнасьць і задавальненьне.}
 Разнастайнасьць харчаваньня стымулюе апэтыт, павялічвае ўзровень задавальненьня і спрыяе таму, каб зьядаць больш. У~гэтым выпадку разнастайнасьць высокакалярыйных прадуктаў можа мець нэгатыўны ўплыў на здароўе і павялічваць пераяданьне. А~вось разнастайнасьць зеляніны, гарэхаў, гародніны таксама павялічвае колькасьць зьедзенага, і ў~такім выпадку гэта мае станоўчае значэньне.
