--- a/nutrition/chapter21.tex
+++ b/nutrition/chapter21.tex
@@ -99,7 +99,7 @@
 Вялікая колькасьць чырвонага мяса (асабліва ў~рацыёне мужчынаў) прыводзіць да назапашваньня залішняга жалеза. Праверыць яго варта, здаўшы аналіз на ўзровень фэрытыну\index{фэрытын}. Калі ён высокі, то лепшы спосаб зьніжэньня~--- стаць донарам. Здавайце 1--3 разы на год кроў, рэгулярна правярайце ўзровень жалеза, асабліва калі ў~вас ёсьць генэтычная схільнасьць да яго назапашваньня.
 
 \paragraph{Мэтыянін\index{мэтыянін} і кантэкст дыеты.}
-Істотна ўплывае і кантэкст дыеты. Напрыклад, у~чалавека, які есьць шмат мяса і мучнога, мала зеляніны і гародніны, спажываньне мэтыяніну можа прыводзіць да павелічэньня ў~крыві гомацыстэіну, што вельмі шкодна для сасудаў. А~вось калі зь мясам есьці больш гародніны, то мэтыянін\index{мэтыянін} будзе лепш засвойвацца з~наяўнасьцю вітамінаў В12, В9, прадуктаў-донараў мэтыльных групаў (халін, бэтаін у~капустах і да т.~п.). Людзям з~мутацыямі фолатнага цыклю (MTHFR, MTR, MTRR) і з~падвышаным гомацыстэінам варта таксама больш уважліва ставіцца да спажываньня чырвонага мяса.
+Істотна ўплывае і кантэкст дыеты. Напрыклад, у~чалавека, які есьць шмат мяса і мучнога, мала зеляніны і гародніны, спажываньне мэтыяніну можа прыводзіць да павелічэньня ў~крыві гомацыстэіну, што вельмі шкодна для сасудаў. А~вось калі зь мясам есьці больш гародніны, то мэтыянін\index{мэтыянін} будзе лепш засвойвацца з~наяўнасьцю вітамінаў B\textsubscript{12}, B\textsubscript{9}, прадуктаў-донараў мэтыльных групаў (халін, бэтаін у~капустах і да т.~п.). Людзям з~мутацыямі фолатнага цыклю (MTHFR, MTR, MTRR) і з~падвышаным гомацыстэінам варта таксама больш уважліва ставіцца да спажываньня чырвонага мяса.
 
 \paragraph{Гатоўля.}
 Бялковыя прадукты вельмі адчувальныя да гатоўлі (гл. разьдзел па гатаваньні). Аптымальныя ашчадныя спосабы гатоўлі, марынаваньне мяса кіслым (воцат, цытрына) і спэцыямі, варыць, а~ня смажыць. Гэта скарачае тэрмін гатаваньня і прадухіляе ўтварэньне шкодных рэчываў. Цікава, што вараная рыба павялічвае працягласьць жыцьця і паляпшае настрой (зьніжэньне рызыкі дэпрэсіі), а~вось смажаная~--- не.
