--- a/nutrition/chapter24.tex
+++ b/nutrition/chapter24.tex
@@ -108,4 +108,4 @@
 Мікрафлёра ротавай поласьці важная для нашага здароўя. Пазьбягайце лішку мучнога (глютэн\index{глютэн} прыляпляе часьціцы крухмалу да зубоў), бактэрыцыдных апалосквальнікаў для рота, выкарыстоўвайце аральныя прабіётыкі\index{прабіётыкі} (S. Salivarius і інш.).
 
 \paragraph{Індывідуальная праграма абсьледаваньня.}
-Таксама на ваш стан уплывае і здароўе. Рэгулярна правярайце яго, здавайце неабходныя, а~лепей~--- пашыраныя дыягнастычныя панэлі. Прыклад падобнай лябараторнай панэлі: глюкоза, глікаваны гемаглабін, інсулін, індэкс інсулінарэзыстэнтнасьці\index{інсулінарэзыстэнтнасьць}, Алат, Асат, крэатынін, мачавая кіслата, гомацыстэін, ультраадчувальны тэст на C-рэактыўны бялок\index{C-рэактыўны бялок}, гармоны шчытападобнай залозы (ТТГ, св. Т3), палавыя гармоны, ІФР-1, гармон росту, цынк, магній, жалеза, фэрытын\index{фэрытын}, вітамін D, вітамін В12. Да іх можна дадаць інструмэнтальныя тэсты, напрыклад УГД сонных артэрыяў з~вызначэньнем таўшчыні комплексу інтым-мэдыя. Пры неабходнасьці можна дапаўняць іншымі абсьледаваньнямі, у~залежнасьці ад узросту і індывідуальнай рызыкі (сямейная гісторыя захворваньняў, генэтычныя рызыкі шэрагу захворваньняў і дэфіцытаў і інш.): анкамаркеры, каланаскапія, фібрагастрадуадэнаскапія і іншыя паказьнікі.
+Таксама на ваш стан уплывае і здароўе. Рэгулярна правярайце яго, здавайце неабходныя, а~лепей~--- пашыраныя дыягнастычныя панэлі. Прыклад падобнай лябараторнай панэлі: глюкоза, глікаваны гемаглабін, інсулін, індэкс інсулінарэзыстэнтнасьці\index{інсулінарэзыстэнтнасьць}, Алат, Асат, крэатынін, мачавая кіслата, гомацыстэін, ультраадчувальны тэст на C-рэактыўны бялок\index{C-рэактыўны бялок}, гармоны шчытападобнай залозы (ТТГ, св. Т3), палавыя гармоны, ІФР-1, гармон росту, цынк, магній, жалеза, фэрытын\index{фэрытын}, вітамін D, вітамін B\textsubscript{12}. Да іх можна дадаць інструмэнтальныя тэсты, напрыклад УГД сонных артэрыяў з~вызначэньнем таўшчыні комплексу інтым-мэдыя. Пры неабходнасьці можна дапаўняць іншымі абсьледаваньнямі, у~залежнасьці ад узросту і індывідуальнай рызыкі (сямейная гісторыя захворваньняў, генэтычныя рызыкі шэрагу захворваньняў і дэфіцытаў і інш.): анкамаркеры, каланаскапія, фібрагастрадуадэнаскапія і іншыя паказьнікі.
