--- a/willpower/chapter1.tex
+++ b/willpower/chapter1.tex
@@ -412,7 +412,7 @@
 
 \paragraph{Рэсурсы здароўя~---} гэта запасы, навыкі або магчымасьці, якія могуць быць скарыстаныя для адаптацыі і спрыяюць дасягненьню выніку ў~пэўных сфэрах жыцьця.
 
-Здароўе практычна немагчыма назьбіраць у~запас: нельга выспацца наперад або наесьціся загадзя (за рэдкім выключэньнем: напрыклад, вітамін В12 можа доўга захоўвацца ў~печані), таму ў~адносінах да рэсурсаў здароўя мы будзем казаць пра патэнцыял. Рэсурс~--- гэта вобласьць, якая паддаецца непасрэднаму ўзьдзеяньню і значна ўплывае на стан здароўя. Памятаеце, мы ўяўлялі адэпта здаровага ладу жыцьця, сьвядомасьць якога перанеслася ў~цела нездаровага чалавека?
+Здароўе практычна немагчыма назьбіраць у~запас: нельга выспацца наперад або наесьціся загадзя (за рэдкім выключэньнем: напрыклад, вітамін B\textsubscript{12} можа доўга захоўвацца ў~печані), таму ў~адносінах да рэсурсаў здароўя мы будзем казаць пра патэнцыял. Рэсурс~--- гэта вобласьць, якая паддаецца непасрэднаму ўзьдзеяньню і значна ўплывае на стан здароўя. Памятаеце, мы ўяўлялі адэпта здаровага ладу жыцьця, сьвядомасьць якога перанеслася ў~цела нездаровага чалавека?
 
 \paragraph{Чалавек, які мае разьвіты рэсурс харчаваньня,} валодае шматлікімі карыснымі навыкамі і звычкамі: ён умее плянаваць рацыён, выбірае добрыя прадукты, не пераядае фастфуду, атрымлівае ад ежы задавальненьне, умее спалучаць ежу і трэніроўкі, сочыць за ўзроўнем важных вітамінаў і мінэралаў, пэрыядычна практыкуе інтэрвальнае галаданьне і шматлікае іншае.
 
