--- a/willpower/chapter11.tex
+++ b/willpower/chapter11.tex
@@ -105,23 +105,23 @@
 
 У офісах увесь час ідуць бітвы паміж тымі, каму душна, і тымі, хто баіцца скавышоў. Ёсьць людзі, якія асабліва гостра адчуваюць якасьць паветра, а~ёсьць тыя, хто баіцца сьвежага паветра. Мы ўжо пагаварылі пра важнасьць чыстага паветра на вуліцы, але вялікае значэньне мае паветра, якім вы дыхаеце дома і на працы. Паветра ў~памяшканьні часта ў~некалькі разоў бруднейшае, чым звонку. Калі мы заходзім з~вуліцы ў~памяшканьне, то можам адчуць сьпёртасьць паветра, але гэтае адчуваньне хутка зьнікае~--- мы да яго звыкаем. Сьпёртасьць~--- гэта часта лішак вуглякіслага газу, які выдыхаюць людзі. Гэта нябачны, але шкодны ў~высокіх канцэнтрацыях чыньнік.
 
-Сярэдняя канцэнтрацыя вуглякіслага газу (СО2) складае ў~вонкавым паветры 0,035\,\%, ці 350 ppm. Але ў~гарадах, дзе больш спальваньня паліва, яго канцэнтрацыя можа дасягаць і 500 ppm. Галоўная крыніца вуглякіслага газу ўнутры памяшканьняў~--- гэта мы самі. Кожны чалавек на кожным выдыху выдыхае паветра з~падвышаным утрыманьнем вуглякіслага газу, які ўтварыўся ў~выніку жыцьцядзейнасьці. Каб падтрымліваць узровень СО2 на нармальных 800 ppm на аднаго чалавека ў~пакоі, патрабуецца вэнтыляцыя каля 34 м3/гадзіну! Калі вокны і дзьверы зашпунтаваныя, а~вэнтыляцыя не працуе, то ўзровень СО2 хутка пачне зашкальваць.
+Сярэдняя канцэнтрацыя вуглякіслага газу (CO\textsubscript{2}) складае ў~вонкавым паветры 0,035\,\%, ці 350 ppm. Але ў~гарадах, дзе больш спальваньня паліва, яго канцэнтрацыя можа дасягаць і 500 ppm. Галоўная крыніца вуглякіслага газу ўнутры памяшканьняў~--- гэта мы самі. Кожны чалавек на кожным выдыху выдыхае паветра з~падвышаным утрыманьнем вуглякіслага газу, які ўтварыўся ў~выніку жыцьцядзейнасьці. Каб падтрымліваць узровень CO\textsubscript{2} на нармальных 800 ppm на аднаго чалавека ў~пакоі, патрабуецца вэнтыляцыя каля 34 м3/гадзіну! Калі вокны і дзьверы зашпунтаваныя, а~вэнтыляцыя не працуе, то ўзровень CO\textsubscript{2} хутка пачне зашкальваць.
 
 Праблема вэнтыляцыі існуе: з~аднаго боку, будаўнікі часта грэбуюць нормамі, робячы няўдалыя сыстэмы вэнтыляцыі, эфэктыўнасьць работы якіх ніхто не правярае. Зь цягам часу шахты могуць забівацца брудам, зашывацца~--- звонку гэта не прыкметна. Зьяўленьне плястыкавых вокнаў яшчэ пагоршыла сытуацыю. Бо ў~драўляных вокнах было шмат невялікіх шчылінаў, якія забясьпечвалі мікравэнтыляцыю, а~цяпер гэтага няма. Часта мы закрываемся ``наглуха'' для цішыні або цяпла. Зьяўленьне ізалявальных матэрыялаў, ушчыльняльнікаў, пракладак для дзьвярэй і вокнаў дазваляе нам цалкам зашпунтаваць сябе ў~хатах. А калі прытоку паветра няма, то і вэнтыляцыя перастае працаваць як мае быць.
 
-Перадусім~--- вымяраем! Існуе вялікая колькасьць датчыкаў, як аўтаномных, так і такіх, што сынхранізуюцца са смартфонамі. Хоць мы вымяраем узровень вуглякіслага газу, гэтая лічба кажа нам і аб якасьці вэнтыляцыі ў~цэлым. Чым менш узровень СО2, тым лепш якасьць паветра, уключаючы разнастайную колькасьць выдыханых намі малекул і нават бактэрыяў. СО2 выступае як газ-дэтэктар якасьці паветра. Ідэальныя ўзроўні СО2~--- да 450 ppm, прымальна да 600--800, стандартная норма да 1000, ад 1000 да 2500~--- млявасьць, зьніжэньне самаадчуваньня, дрэнны сон і да т.~п., вышэй за 2500 ppm~--- пажадана пакінуць памяшканьне.
+Перадусім~--- вымяраем! Існуе вялікая колькасьць датчыкаў, як аўтаномных, так і такіх, што сынхранізуюцца са смартфонамі. Хоць мы вымяраем узровень вуглякіслага газу, гэтая лічба кажа нам і аб якасьці вэнтыляцыі ў~цэлым. Чым менш узровень CO\textsubscript{2}, тым лепш якасьць паветра, уключаючы разнастайную колькасьць выдыханых намі малекул і нават бактэрыяў. CO\textsubscript{2} выступае як газ-дэтэктар якасьці паветра. Ідэальныя ўзроўні CO\textsubscript{2}~--- да 450 ppm, прымальна да 600--800, стандартная норма да 1000, ад 1000 да 2500~--- млявасьць, зьніжэньне самаадчуваньня, дрэнны сон і да т.~п., вышэй за 2500 ppm~--- пажадана пакінуць памяшканьне.
 
-Высокі ўзровень СО2 уплывае на тонус сасудаў галаўнога мозгу, зьніжае прадуктыўнасьць, уважлівасьць і ініцыятыўнасьць. Яго высокія ўзроўні непажадана ўзьдзейнічаюць на мозг і цела, павялічваецца кіслотнасьць плазмы крыві, зьмяняецца тонус сасудаў. Павялічваецца частата галаўных боляў, рэзка падае прадуктыўнасьць, пагаршаецца памяць і шматлікія паказьнікі мысьленьня, асабліва ў~рашэньні складаных задач. Чым менш пакой, больш у~ім людзей~--- тым вышэй узровень СО2.
+Высокі ўзровень CO\textsubscript{2} уплывае на тонус сасудаў галаўнога мозгу, зьніжае прадуктыўнасьць, уважлівасьць і ініцыятыўнасьць. Яго высокія ўзроўні непажадана ўзьдзейнічаюць на мозг і цела, павялічваецца кіслотнасьць плазмы крыві, зьмяняецца тонус сасудаў. Павялічваецца частата галаўных боляў, рэзка падае прадуктыўнасьць, пагаршаецца памяць і шматлікія паказьнікі мысьленьня, асабліва ў~рашэньні складаных задач. Чым менш пакой, больш у~ім людзей~--- тым вышэй узровень CO\textsubscript{2}.
 
 Акрамя мозгу, растуць рызыкі для цела. Напрыклад, павялічваецца ўзровень запаленьня праз актывацыю NLRP3 інфламасомаў і павышэньне ўзроўню IL-1в, узмацняецца пульс спакою, павышаецца рызыка дэпрэсіі. Цікава, што гіпэркапнія і зьніжэньне pH плазмы стымулюе арэксінавыя нэўроны і ўзмацняе апэтыт! Ёсьць дасьледаваньні аб тым, што гіпэркапнія непасрэдна стымулюе рост тлушчавых клетак. Таксама пры працяглыях падвышаных узроўнях вуглякіслага газу вышэй рызыка саркапэніі, астэапарозу, хранічных хваробаў нырак. Высокія ўзроўні вуглякіслага газу 2,000~--- 3,000 ppm узмацняюць кальцыфікацыю нырак і паскараюць дэмінэралізацыю костак.
 
-Асабліва небясьпечна гэта ў~офісах, дзе ў~адным памяшканьні можа адначасова знаходзіцца вялікая колькасьць людзей. У школах узровень СО2 вышэйшы за 1000 ppm у~некалькі разоў павялічваў захворваньне на ВРЗ. Узмацняецца выдзяленьне вуглякіслага газу пры занятках спортам, а~калі спартзаля не абсталяваная адэкватнай вэнтыляцыяй, гэта можа нэгатыўна паўплываць на здароўе спартоўцаў.
+Асабліва небясьпечна гэта ў~офісах, дзе ў~адным памяшканьні можа адначасова знаходзіцца вялікая колькасьць людзей. У школах узровень CO\textsubscript{2} вышэйшы за 1000 ppm у~некалькі разоў павялічваў захворваньне на ВРЗ. Узмацняецца выдзяленьне вуглякіслага газу пры занятках спортам, а~калі спартзаля не абсталяваная адэкватнай вэнтыляцыяй, гэта можа нэгатыўна паўплываць на здароўе спартоўцаў.
 
 Чым больш людзей, тым інтэнсіўнейшая патрабуецца вэнтыляцыя для падтрыманьня нармальнай канцэнтрацыі вуглякіслага газу. Выбірайце памяшканьні зь вялікім аб'ёмам, каб вам заўсёды ставала, чым дыхаць. Пры куплі жыльля пажадана лічыць ня толькі квадратныя мэтры, але і кубічныя. Гэх, я так люблю высокія столі! Памятайце, што кандыцыянэр забясьпечвае астуджэньне паветра, ганяючы адзін і той жа яго аб'ём, таму без прытоку сьвежага паветра будзе назапашвацца вуглякіслы газ.
 
 Прыток і адток паветра. Неабходна забясьпечыць як прыток паветра, так і яго адток. Пры адсутнасьці аднаго ці іншага якасьць вэнтыляцыі падае. Эфэктыўнасьць выцяжкі праверыць лёгка~--- запаліце запалку і патушыце, дым ад яе павінен уцягвацца ў~адтуліну. У ідэале сіла выцяжкі павінна быць такой, каб утрымліваць аркуш паперы. Ветраньне дома дапамагае хутка ачысьціць паветра, але пры закрытых вокнах і адсутнасьці выцяжкі вуглякіслы газ за пару гадзінаў зноў назапасіцца да небясьпечных узроўняў. На жаль, проста адкрыць вокны не заўсёды магчыма, бо гэта астуджае кватэру, упускае шум, праз адкрытыя вокны паступае паветра без папярэдняй ачысткі.
 
-Па меры павелічэньня эфэктыўнасьці прытоку паветра ў~хаце важна зрабіць: прытокавыя клапаны пасіўныя, затым прытокавая прымусовая вэнтыляцыя з~ачысткай паветра, прытокавая-выцяжная вэнтыляцыя з~СО2-датчыкам, якая падтрымлівае дакладны ўзровень СО2 у~залежнасьці ад колькасьці людзей у~памяшканьні і дазваляе эканоміць электрычнасьць і цеплыню, калі ў~пакоі нікога няма. Для эканоміі цяпла ёсьць адмысловыя сыстэмы рэкупэрацыі. Вядома, такія сыстэмы дарагія, палепшыць сытуацыю дапамагаюць і простыя пасіўныя прытокавыя клапаны і прачыстка вэнтыляцыйных шахт, усталёўка ў~іх прымусовай выцяжкі. Зьніжэньне ўзроўню СО2 зьніжае колькасьць лятучых арганічных злучэньняў, фармальдэгіду, колькасьць бактэрыяў і грыбкоў у~паветры.
+Па меры павелічэньня эфэктыўнасьці прытоку паветра ў~хаце важна зрабіць: прытокавыя клапаны пасіўныя, затым прытокавая прымусовая вэнтыляцыя з~ачысткай паветра, прытокавая-выцяжная вэнтыляцыя з~CO\textsubscript{2}-датчыкам, якая падтрымлівае дакладны ўзровень CO\textsubscript{2} у~залежнасьці ад колькасьці людзей у~памяшканьні і дазваляе эканоміць электрычнасьць і цеплыню, калі ў~пакоі нікога няма. Для эканоміі цяпла ёсьць адмысловыя сыстэмы рэкупэрацыі. Вядома, такія сыстэмы дарагія, палепшыць сытуацыю дапамагаюць і простыя пасіўныя прытокавыя клапаны і прачыстка вэнтыляцыйных шахт, усталёўка ў~іх прымусовай выцяжкі. Зьніжэньне ўзроўню CO\textsubscript{2} зьніжае колькасьць лятучых арганічных злучэньняў, фармальдэгіду, колькасьць бактэрыяў і грыбкоў у~паветры.
 
 \subsection*{Пытаньні і заданьні}
 
