--- a/willpower/chapter12.tex
+++ b/willpower/chapter12.tex
@@ -10,7 +10,7 @@
 
 Дадаюць праблемаў і мэдыцынскія заключэньні аб уплыве сонечных прамянёў. Было заўважана, што сонца зьяўляецца вядучай прычынай старэньня скуры (фотастарэньня), павялічвае рызыку шэрагу ракавых захворваньняў скуры, уключаючы такую небясьпечную пухліну, як мэляному. Гэта прывяло да распаўсюджваньня сонцаахоўных крэмаў, актыўнага пазьбяганьня сонца, выкарыстаньня сонцаахоўных акуляраў для зьніжэньня рызыкі праблемаў зь сятчаткай вачэй.
 
-Нават у~такіх сонечных краінах, як Аўстралія, у~50--60\,\% насельніцтва можа сустракацца дэфіцыт вітаміну Д, узровень якога адлюстроўвае знаходжаньне на сонцы. Сёньня, у~выніку маштабных навуковых дасьледаваньняў, мы бачым чарговую зьмену парадыгмы~--- новае прызнаньне нязьменнай эвалюцыйнай карысьці сонечнага сьвятла. Як аказалася, яго перавагі нашмат перавешваюць рызыкі, а~пісьменнае выкарыстаньне здольнае гэтыя рызыкі нашмат паменшыць. 
+Нават у~такіх сонечных краінах, як Аўстралія, у~50--60\,\% насельніцтва можа сустракацца дэфіцыт вітаміну D, узровень якога адлюстроўвае знаходжаньне на сонцы. Сёньня, у~выніку маштабных навуковых дасьледаваньняў, мы бачым чарговую зьмену парадыгмы~--- новае прызнаньне нязьменнай эвалюцыйнай карысьці сонечнага сьвятла. Як аказалася, яго перавагі нашмат перавешваюць рызыкі, а~пісьменнае выкарыстаньне здольнае гэтыя рызыкі нашмат паменшыць. 
 
 Апошнім часам вельмі ўзрос інтарэс да вітаміну D, і людзі сталі ўжываць яго практычна як панацэю. Аднак важна зразумець, што ўзровень вітаміну D адлюстроўвае працягласьць знаходжаньня чалавека на сонцы і, па сутнасьці, зьяўляецца сурагатным маркерам.
 
@@ -41,23 +41,23 @@
 
 Самы просты спосаб палепшыць працу сваіх цыркадных гадзіньнікаў і біярытмаў~--- павялічыць колькасьць сьвятла днём. Гэта і лямпы фотатэрапіі, і простая рада «часьцей бываць на вуліцы». Але важна ня проста зрабіць «ярчэйшыя дні»: трэба яшчэ і зрабіць «ночы цямнейшымі», для мозгу важная менавіта гэтая розьніца. Для прыкладу, перапад дзённай і начной асьветленасьці для амішаў у~10 разоў больш, чым для сучаснага амерыканца. Можна пайсьці ў~турыстычны паход на прыроду. Дасьледаваньне паказала, што ўсяго два дні на прыродзе нармалізуюць цыркадныя рытмы, і ў~чалавека мэлятанін пачынае ўзрастаць вечарам на 1,4 гадзіны раней, чым да паходу.
 
-Сінтэз вітаміну Д. Сонечнае сьвятло спрыяе ўтварэньню вітаміну Д. Яго колькасьць залежыць ад геаграфічнай шыраты, воблачнасьці, паравіны году, часу содняўк. Чым сьвятлейшая скура і больш адкрытых участкаў, тым больш утворыцца вітаміну Д. Мае значэньне і час содняў~--- калі цень карацейшы за рост, то скура атрымлівае больш сонца, а~вось раніцай перад працай або позьнім вечарам пасьля выпрацоўка вітаміну Д мінімальная. На жаль, гарадзкія жыхары бываюць на сонцы менавіта ў~той час, калі «цень даўжэйшы за рост», і вітамін Д не выпрацоўваецца. Адзеньне, загар, узрост, смуга, забруджваньне паветра~--- усё гэта зьніжае выпрацоўку вітаміну Д.
+Сінтэз вітаміну D. Сонечнае сьвятло спрыяе ўтварэньню вітаміну D. Яго колькасьць залежыць ад геаграфічнай шыраты, воблачнасьці, паравіны году, часу содняўк. Чым сьвятлейшая скура і больш адкрытых участкаў, тым больш утворыцца вітаміну D. Мае значэньне і час содняў~--- калі цень карацейшы за рост, то скура атрымлівае больш сонца, а~вось раніцай перад працай або позьнім вечарам пасьля выпрацоўка вітаміну D мінімальная. На жаль, гарадзкія жыхары бываюць на сонцы менавіта ў~той час, калі «цень даўжэйшы за рост», і вітамін D не выпрацоўваецца. Адзеньне, загар, узрост, смуга, забруджваньне паветра~--- усё гэта зьніжае выпрацоўку вітаміну D.
 
-З 20 да 70 гадоў сінтэз вітаміну Д у~скуры падае ў~4 разы. У людзей з~залішняй вагой тлушчавая тканіна актыўна паглынае вітамін Д. У Дэлі дэфіцыт вітаміну Д адчувае да 90\,\% жыхароў, і нават Аўстралія так заўзята змагалася з~ракам скуры, што атрымала дэфіцыт вітаміну Д. 
+З 20 да 70 гадоў сінтэз вітаміну D у~скуры падае ў~4 разы. У людзей з~залішняй вагой тлушчавая тканіна актыўна паглынае вітамін D. У Дэлі дэфіцыт вітаміну D адчувае да 90\,\% жыхароў, і нават Аўстралія так заўзята змагалася з~ракам скуры, што атрымала дэфіцыт вітаміну D. 
 
-Колькі ж вітаміну Д выпрацоўваецца на сонцы? Для разьліку выкарыстоўваецца складаная формула з~улікам вашага тыпу скуры, вагі, росту, месца пражываньня. Таму лепш скарыстацца праграмамі: Dminder (Android iOS) або SunDay: Vitamin D \& UV Monitor. Яны яшчэ і разьлічваюць бясьпечную для скуры колькасьць сонца для вашай геаграфіі і надвор'я. Калі я ў~плаўках выйду ў~Тайландзе ў~13:00 на пляж бяз крэму (чаго я, вядома, не раблю), то літаральна за 10 хвілін атрымаю 10.000 МЕ вітаміну Д. 
+Колькі ж вітаміну D выпрацоўваецца на сонцы? Для разьліку выкарыстоўваецца складаная формула з~улікам вашага тыпу скуры, вагі, росту, месца пражываньня. Таму лепш скарыстацца праграмамі: Dminder (Android iOS) або SunDay: Vitamin D \& UV Monitor. Яны яшчэ і разьлічваюць бясьпечную для скуры колькасьць сонца для вашай геаграфіі і надвор'я. Калі я ў~плаўках выйду ў~Тайландзе ў~13:00 на пляж бяз крэму (чаго я, вядома, не раблю), то літаральна за 10 хвілін атрымаю 10.000 МЕ вітаміну D. 
 
-З дапамогай сонечных ваннаў можна стварыць у~падскурнай клятчатцы вялікі запас вітаміну Д, якога хопіць і на зімовыя месяцы. Але лепш не рызыкаваць~--- і зімой прымаць прафіляктычныя дозы вітаміну. 
+З дапамогай сонечных ваннаў можна стварыць у~падскурнай клятчатцы вялікі запас вітаміну D, якога хопіць і на зімовыя месяцы. Але лепш не рызыкаваць~--- і зімой прымаць прафіляктычныя дозы вітаміну. 
 
-Выпрацоўка вітаміну Д адбываецца ў~скуры, ён утвараецца з~7-дэгідрахалестэролу пры ўзьдзеяньні ультрафіялету B (даўжыня хвалі 315--280 нм). Рэцэптары да вітаміну Д ёсьць практычна ўсюды, таму вітамін Д нават завуць гармонам. Ён рэгулюе ня толькі абмен кальцыя, але і ўплывае на рост клетак, сасудаў, выпрацоўку інсуліну, працу імуннай сыстэмы, палавой сыстэмы, актывуе транскрыпцыю каля 200 генаў.
+Выпрацоўка вітаміну D адбываецца ў~скуры, ён утвараецца з~7-дэгідрахалестэролу пры ўзьдзеяньні ультрафіялету B (даўжыня хвалі 315--280 нм). Рэцэптары да вітаміну D ёсьць практычна ўсюды, таму вітамін D нават завуць гармонам. Ён рэгулюе ня толькі абмен кальцыя, але і ўплывае на рост клетак, сасудаў, выпрацоўку інсуліну, працу імуннай сыстэмы, палавой сыстэмы, актывуе транскрыпцыю каля 200 генаў.
 
-Колькасьць атрыманага ўльтрафіялету вымяраюць у~мінімальных эрытэмных дозах, то бок яго колькасьці, неабходнай для ледзь прыкметнага пачырваненьня скуры. У год для падтрыманьня ўзроўню вітаміну D дастаткова ўсяго 50--60 эрытэмных дозаў. 1 эрітемной доза = 25.000 МЕ вітаміну D. Мінімум сонца~--- гэта чвэрць эрытэмнай дозы: ад 5 да 30 хвілін у~залежнасьці ад геаграфіі, 6--7 раз у~тыдзень на твар, рукі, ногі, з~10:00 да 15:00 у~сярэдніх шыротах. Як бачыце, для атрыманьня вітаміну Д згараць зусім неабавязкова. Праўда, з~сонцам у~зімовыя месяцы будзе крыху цяжкавата.
+Колькасьць атрыманага ўльтрафіялету вымяраюць у~мінімальных эрытэмных дозах, то бок яго колькасьці, неабходнай для ледзь прыкметнага пачырваненьня скуры. У год для падтрыманьня ўзроўню вітаміну D дастаткова ўсяго 50--60 эрытэмных дозаў. 1 эрітемной доза = 25.000 МЕ вітаміну D. Мінімум сонца~--- гэта чвэрць эрытэмнай дозы: ад 5 да 30 хвілін у~залежнасьці ад геаграфіі, 6--7 раз у~тыдзень на твар, рукі, ногі, з~10:00 да 15:00 у~сярэдніх шыротах. Як бачыце, для атрыманьня вітаміну D згараць зусім неабавязкова. Праўда, з~сонцам у~зімовыя месяцы будзе крыху цяжкавата.
 
-Дадаткі вітаміну D. Калі ваш узровень вітаміну D ніжэй за 30 НГ / мл і вы ня можаце атрымаць дастатковую колькасьць сонца, то ёсьць сэнс прымаць яго дабаўкі. Для прафіляктыкі гіпавітамінозу D у~зімовы час, магчыма, таксама варта ўжываць яго ў~дадатках (але ня больш за 2000 МЕ у~дзень) і хаця б раз у~год вымяраць яго ўзровень у~плазьме крыві. Вітамін D, выпрацаваны ў~скуры, не распадаецца прынамсі ўдвая даўжэй, чым вітамін D у~дадатках. Перадазіроўка вітаміну D за кошт сонечных прамянёў немагчымая. Акрамя сонца і дабавак, невялікія колькасьці вітаміну D можна атрымліваць з~тлустай марской рыбай. Фізычная актыўнасьць павялічвае мабілізацыю вітаміну D з~тлушчу. Але сонца~--- гэта нашмат больш, чым вітамін Д. І замяніць сонца дадаткам немагчыма. Давайце разьбяромся, якія ж ключавыя мэханізмы карыснага дзеяньня сонца.
+Дадаткі вітаміну D. Калі ваш узровень вітаміну D ніжэй за 30 НГ / мл і вы ня можаце атрымаць дастатковую колькасьць сонца, то ёсьць сэнс прымаць яго дабаўкі. Для прафіляктыкі гіпавітамінозу D у~зімовы час, магчыма, таксама варта ўжываць яго ў~дадатках (але ня больш за 2000 МЕ у~дзень) і хаця б раз у~год вымяраць яго ўзровень у~плазьме крыві. Вітамін D, выпрацаваны ў~скуры, не распадаецца прынамсі ўдвая даўжэй, чым вітамін D у~дадатках. Перадазіроўка вітаміну D за кошт сонечных прамянёў немагчымая. Акрамя сонца і дабавак, невялікія колькасьці вітаміну D можна атрымліваць з~тлустай марской рыбай. Фізычная актыўнасьць павялічвае мабілізацыю вітаміну D з~тлушчу. Але сонца~--- гэта нашмат больш, чым вітамін D. І замяніць сонца дадаткам немагчыма. Давайце разьбяромся, якія ж ключавыя мэханізмы карыснага дзеяньня сонца.
 
 Сынтэз NO (аксід азоту). Выбіраючыся на пікнік, гараджане часта заўважаюць, што ў~іх ад чыстага паветра ледзь ня кружыцца галава. Насамрэч гэта дзеяньне сонца. Можна правесьці навуковы экспэрымэнт: для яго нам патрэбны таномэтр і 20-хвіліннае знаходжаньне на сонцы. Вымярыўшы ціск да і пасьля, вы зможаце ўбачыць, што ціск пасьля знаходжаньня на сонцы зьнізілася. Пад узьдзеяньнем сонца ў~сасудах выдзяляецца аксід азоту, які валодае сасудапашыральным дзеяньнем і абараняе ад атэрасклерозу.
 
-Аксід азоту~--- гэта актыўнае злучэньне, якое выпрацоўваецца ў~нашым арганізьме і валодае дабратворным узьдзеяньнем на здароўе сасудаў, пашыраючы іх, яно зьніжае запаленьне, паляпшае гаеньне ранаў, паляпшае працу мітахондрыяў, зьніжае рызыкі сардэчна-сасудзістых захворваньняў, узмацняе эрэкцыю і да т.~п. У нашай скуры захоўваецца шмат азоту ў~выглядзе нітратаў, нітрытаў і нітразатыёлу. Калі на скуру трапляе сонечнае сьвятло, адбываецца выпрацоўка аксіду азоту. Цікава, што для гэтага патрабуецца даўгахвалевы ультрафіялет А (315--400 нм), які менш расьсейваецца. Таму шпацыр на сонцы будзе карысны, нават калі вітамін Д амаль не выпрацоўваецца. Фізычная актыўнасьць таксама дапамагае выдзяляцца аксіду азоту ў~сасудах, так што трэніроўка на адкрытым паветры пры сьвятле дня дае аптымальны эфэкт. Варта ўжываць у~ежу дастатковую колькасьць гародніны, дзе шмат карыснага азоту, напрыклад, чырвоны бурак.
+Аксід азоту~--- гэта актыўнае злучэньне, якое выпрацоўваецца ў~нашым арганізьме і валодае дабратворным узьдзеяньнем на здароўе сасудаў, пашыраючы іх, яно зьніжае запаленьне, паляпшае гаеньне ранаў, паляпшае працу мітахондрыяў, зьніжае рызыкі сардэчна-сасудзістых захворваньняў, узмацняе эрэкцыю і да т.~п. У нашай скуры захоўваецца шмат азоту ў~выглядзе нітратаў, нітрытаў і нітразатыёлу. Калі на скуру трапляе сонечнае сьвятло, адбываецца выпрацоўка аксіду азоту. Цікава, што для гэтага патрабуецца даўгахвалевы ультрафіялет А (315--400 нм), які менш расьсейваецца. Таму шпацыр на сонцы будзе карысны, нават калі вітамін D амаль не выпрацоўваецца. Фізычная актыўнасьць таксама дапамагае выдзяляцца аксіду азоту ў~сасудах, так што трэніроўка на адкрытым паветры пры сьвятле дня дае аптымальны эфэкт. Варта ўжываць у~ежу дастатковую колькасьць гародніны, дзе шмат карыснага азоту, напрыклад, чырвоны бурак.
 
 Зімовы сардэчна-сасудзісты фэномэн~--- гэта пачашчэньне многіх хваробаў, ад трамбозаў да інсультаў, так зімой частата тромбаэмбаліі вышэй на 20\,\%, інсультаў~--- на 48\,\%, чым у~іншыя месяцы. Узімку вышэй узровень адрэналіну, ангіятэнзіну, гэтую зьяву тлумачаць і меншай рухомасьцю, і брудным паветрам, але ня будзем забываць пра наймацнейшы дэфіцыт~--- пра сонца. Сонца зьніжае рызыку сардэчна-сасудзістых захворваньняў рознымі спосабамі. Мы казалі пра вызваленьне аксіду азоту пад узьдзеяньнем ультрафіялету, але навукоўцы дасьледавалі і іншы мэханізм~--- яркасьць сьвятла. Аказваецца, сьвятло сілай у~10.000 люкс павялічвае актыўнасьць экспрэсіі цыркаднага гена Period 2 (PER2), што ў~сваю чаргу павялічвае актыўнасьць гіпаксіяй індукаванага фактару HIF1A. А HIF1A у~сваю чаргу аказвае ахоўны эфэкт у~розных тканках. Такім чынам, яркае сьвятло абараняе ад сардэчна-сасудзістых захворваньняў і, у~выпадку інфаркту, значна абмяжоўвае пашкоджаньне сардэчнай мышцы.
 
@@ -65,7 +65,7 @@
 
 У экспэрымэнтах увядзеньне мэлянакартынаў памяншала колькасьць зьяданай ежы і спрыяла пахудзеньню. Таму павелічэньне часу знаходжаньня на сонцы дапаможа вам зьменшыць вагу. А вось адсутнасьць сонца зьмяншае спальваньне тлушчу, магчыма, гэтая рэакцыя зьяўляецца эвалюцыйна набытай для выжываньня зімой, калі мала ежы. Акрамя гэтага, мэлянацытстымулёўныя гармоны зьніжаюць узровень хранічнага запаленьня, палягчаючы цячэньне шматлікіх захворваньняў. 
 
-Ураканінавая кіслата. Пад узьдзеяньнем ультрафіялету В разам з~утварэньнем вітаміну Д адбываюцца і зьмены ўраканінавай кіслаты. Пры трапленьні сонца на скуру яе транс-форма ператвараецца ў~цыс-форму з~паглынаньнем вялікай колькасьці энэргіі. У цемры ж назіраецца зваротны працэс: яна мяняе канфігурацыю, расьсейваючы назапашаную энэргію ў~выглядзе цяпла. Гэты мэханізм нараўне з~утварэньнем мэляніну абараняе клеткі скуры ад пашкоджаньня. Цікава, што ўраканінавая кіслата выдзяляецца з~потам, забясьпечваючы абарону на паверхні скуры. Таму пры моцным ветры згарэць можна хутчэй. Карысьць ураканінавай кіслаты ня толькі ў~абароне скуры. Пры ўзьдзеяньні сонца яе ўзровень павялічваецца і ў~мозгу, дзе яна зьяўляецца пры ператварэньні амінакіслоты гістыдзіну ў~глутамінавую кіслату. Глутамат~--- гэта адзін з~галоўных узбуджальных нэўрамэдыятараў мозгу. У дасьледаваньнях у~жывёлаў пасьля апрамяненьня ультрафіялетам паляпшаліся кагнітыўныя функцыі. 
+Ураканінавая кіслата. Пад узьдзеяньнем ультрафіялету В разам з~утварэньнем вітаміну D адбываюцца і зьмены ўраканінавай кіслаты. Пры трапленьні сонца на скуру яе транс-форма ператвараецца ў~цыс-форму з~паглынаньнем вялікай колькасьці энэргіі. У цемры ж назіраецца зваротны працэс: яна мяняе канфігурацыю, расьсейваючы назапашаную энэргію ў~выглядзе цяпла. Гэты мэханізм нараўне з~утварэньнем мэляніну абараняе клеткі скуры ад пашкоджаньня. Цікава, што ўраканінавая кіслата выдзяляецца з~потам, забясьпечваючы абарону на паверхні скуры. Таму пры моцным ветры згарэць можна хутчэй. Карысьць ураканінавай кіслаты ня толькі ў~абароне скуры. Пры ўзьдзеяньні сонца яе ўзровень павялічваецца і ў~мозгу, дзе яна зьяўляецца пры ператварэньні амінакіслоты гістыдзіну ў~глутамінавую кіслату. Глутамат~--- гэта адзін з~галоўных узбуджальных нэўрамэдыятараў мозгу. У дасьледаваньнях у~жывёлаў пасьля апрамяненьня ультрафіялетам паляпшаліся кагнітыўныя функцыі. 
 
 Ураканінавая кіслата~--- чыньнік стрымліваньня актыўнасьці імуннай сыстэмы: пры яе недахопе павялічваюцца рызыкі алергічных і аўтаімунных захворваньняў, а~вось пры лішку можа ўзьнікаць імунасупрэсія. 
 
@@ -282,7 +282,7 @@
 
 Мы звыклі да ідэі, што для паляпшэньня мікрафлёры трэба абавязкова нешта есьці. Аднак ёсьць гіпотэзы, што адной з~прычынаў парушэньняў зьяўляецца акурат лішак пажыўных рэчываў, і абмежаваньні ў~харчаваньні могуць палепшыць стан кішачніка.
 
-На мікрафлёру дабратворна ўплывае ўмацаваньне іншых рэсурсаў здароўя, напрыклад дастатковы сон. Дэфіцыт сну спрыяе парушэньню суадносінаў паміж Firmicutes і Bacteriodetes, што зьяўляецца чыньнікам рызыкі атлусьценьня. Зь іншага боку, павелічэньне прадукцыі бутырату падаўжае фазу глыбокага сну і вядзе да ніжэйшых значэньняў тэмпэратуры цела. Фізычная актыўнасць паляпшае разнастайнасьць мікрафлёры і яе склад, але пры спыненьні заняткаў эфэкт хутка зьнікае. Сонечнае сьвятло таксама паляпшае мікрабіем: ультрафіялет спрыяе павелічэньню колькасьці бутырат-прадукавальных відаў бактэрый. Дадаткі вітаміну Д могуць часткова ўзнавіць гэты эфэкт. Паляпшэньне працы імуннай сыстэмы, якое прыводзіць да павелічэньня выпрацоўкі супрацьзапаленчых цітакінаў, такіх як ІЛ-22, таксама дабратворна адбіваецца на складзе мікрабіёмы.
+На мікрафлёру дабратворна ўплывае ўмацаваньне іншых рэсурсаў здароўя, напрыклад дастатковы сон. Дэфіцыт сну спрыяе парушэньню суадносінаў паміж Firmicutes і Bacteriodetes, што зьяўляецца чыньнікам рызыкі атлусьценьня. Зь іншага боку, павелічэньне прадукцыі бутырату падаўжае фазу глыбокага сну і вядзе да ніжэйшых значэньняў тэмпэратуры цела. Фізычная актыўнасць паляпшае разнастайнасьць мікрафлёры і яе склад, але пры спыненьні заняткаў эфэкт хутка зьнікае. Сонечнае сьвятло таксама паляпшае мікрабіем: ультрафіялет спрыяе павелічэньню колькасьці бутырат-прадукавальных відаў бактэрый. Дадаткі вітаміну D могуць часткова ўзнавіць гэты эфэкт. Паляпшэньне працы імуннай сыстэмы, якое прыводзіць да павелічэньня выпрацоўкі супрацьзапаленчых цітакінаў, такіх як ІЛ-22, таксама дабратворна адбіваецца на складзе мікрабіёмы.
 
 Харчаваньне. Здаровае харчаваньне падкормлівае добрую мікрафлёру, дрэннае~--- патагенныя штамы бактэрыяў. Некаторыя папулярныя дыеты, такія як карнівор ці кета, могуць прыводзіць да прыкметнага пагаршэньня мікрафлёры. Лішак тлушчу, цукру, алькаголю, пераяданьне, нерэгулярнае харчаваньне шкодзяць мікрафлёры. Пры нізкай разнастайнасьці мікрафлёры часьцей сустракаецца залішняя вага, інсулінарэзістэнтнасьць, ніжэй узровень ЛПВП, вышэй узровень трыгліцерыдаў, СЖК, лептыну і тп.
 
