--- a/willpower/chapter2.tex
+++ b/willpower/chapter2.tex
@@ -98,7 +98,7 @@
 
 \subsection*{Цана адаптацыі.}
 
-Культурныя зьмены ў~гісторыі нашай цывілізацыі суправаджаліся драматычнай зьменай і здароўя, і вонкавага выгляду людзей. Напрыклад, засяляючы паўночныя тэрыторыі, людзі сутыкнуліся з~дэфіцытам вітаміну Д. Пад узьдзеяньнем натуральнага адбору перавагу атрымалі сьветлыя адценьні скуры, якія дазвалялі забясьпечваць аптымальны ўзровень гэтага вітаміну і пры меншай сонечнай актыўнасьці. 
+Культурныя зьмены ў~гісторыі нашай цывілізацыі суправаджаліся драматычнай зьменай і здароўя, і вонкавага выгляду людзей. Напрыклад, засяляючы паўночныя тэрыторыі, людзі сутыкнуліся з~дэфіцытам вітаміну D. Пад узьдзеяньнем натуральнага адбору перавагу атрымалі сьветлыя адценьні скуры, якія дазвалялі забясьпечваць аптымальны ўзровень гэтага вітаміну і пры меншай сонечнай актыўнасьці. 
 
 Саграваючыся ў~зямлянках і дамах агменем без вывадной трубы, нашы продкі дыхалі вялікай колькасьцю дыму, што вельмі шкодна ўплывала на здароўе, павялічваючы рызыку хваробаў сэрца і раку лёгкіх. Магчыма, гэта прыносіла шкоду яшчэ большую, чым паветра сучасных загазаваных гарадоў.
 
@@ -396,7 +396,7 @@
 
 \subsection*{Харчаваньне.}
 
-Харчаваньне~--- гэта ня толькі вага, яно ўплывае на мноства захворваньняў. Нездаровае харчаваньне правакуе і пагаршае плынь практычна ўсіх аўтаімунных захворваньняў. Чыньнікі рызыкі могуць быць самыя розныя: гіпэрактыўнасьць mTOR, лішак солі, парушэньне мікрафлёры кішачніка, хранічнае запаленьне, дэфіцыт сонечнага сьвятла і вітаміну Д, якія могуць дзейнічаць сінэргічна. Дасьледаваньні паказваюць, што сярод прадуктаў, што павялічваюць рызыку расьсеянага склерозу, знаходзіцца празьмернае спажываньне малака і мяса, небясьпечны лішак тлушчу і калёрыяў. Такі ж патэрн характэрны і для рэўматоіднага артрыту. Клятчатка, Амега-3 тлустыя кіслоты і поліфэнолы прадказальна зьніжаюць рызыку гэтых захворваньняў. 
+Харчаваньне~--- гэта ня толькі вага, яно ўплывае на мноства захворваньняў. Нездаровае харчаваньне правакуе і пагаршае плынь практычна ўсіх аўтаімунных захворваньняў. Чыньнікі рызыкі могуць быць самыя розныя: гіпэрактыўнасьць mTOR, лішак солі, парушэньне мікрафлёры кішачніка, хранічнае запаленьне, дэфіцыт сонечнага сьвятла і вітаміну D, якія могуць дзейнічаць сінэргічна. Дасьледаваньні паказваюць, што сярод прадуктаў, што павялічваюць рызыку расьсеянага склерозу, знаходзіцца празьмернае спажываньне малака і мяса, небясьпечны лішак тлушчу і калёрыяў. Такі ж патэрн характэрны і для рэўматоіднага артрыту. Клятчатка, Амега-3 тлустыя кіслоты і поліфэнолы прадказальна зьніжаюць рызыку гэтых захворваньняў. 
 
 \tipbox{Шмат мяснога, малочнага, салодкага, мучнога 3--6 разоў на дзень, хай нават у~невялікіх колькасьцях, крытычна падвышае гіпэрактыўнасьць малекулярнага комплексу mTOR.}
 
@@ -418,7 +418,7 @@
 
 \subsection*{Дэфіцыт сонечнага сьвятла.}
 
-Калі гаворка заходзіць пра аўтаімунные захворваньні, часта кажуць пра дэфіцыт вітаміну Д. Сапраўды, маларухомы лад жыцьця вядзе да дэфіцыту сонечнага сьвятла, і гэты дэфіцыт павялічвае рызыку іх узьнікненьня. Невыпадкова большасьць аўтаімунных захворваньняў, напрыклад расьсеяны склероз, упершыню выяўляюцца менавіта ўзімку. 
+Калі гаворка заходзіць пра аўтаімунные захворваньні, часта кажуць пра дэфіцыт вітаміну D. Сапраўды, маларухомы лад жыцьця вядзе да дэфіцыту сонечнага сьвятла, і гэты дэфіцыт павялічвае рызыку іх узьнікненьня. Невыпадкова большасьць аўтаімунных захворваньняў, напрыклад расьсеяны склероз, упершыню выяўляюцца менавіта ўзімку. 
 
 \tipbox{Існуе правіла 1000 гадзінаў: для здароўя на працягу году трэба быць на вуліцы каля трох гадзінаў на дзень.}
 
