--- a/willpower/chapter3.tex
+++ b/willpower/chapter3.tex
@@ -143,7 +143,7 @@
 
 % ((карцінка: рухальная актыўнасьць калёрыі, макранутрыенты узровень стрэсу пульс і ціск якасьць і колькасьць сну якасьць паветра праца мозгу))
 
-Мы можам ацэньваць ня толькі ўнутранае, але і навакольнае асяродзьдзе, заўважаючы, як на наша здароўе і самаадчуваньне ўплывае ўсё, што нас атачае. Напрыклад, праграмы SunDay: Vitamin D \& UV Monitor або Dminder дапамогуць адсачыць сонечную актыўнасьць, час для загару і ўзровень вітаміну Д. Падключаныя да смартфона датчыкі вуглякіслага газу (\ce{CO2}), чысьціні паветра (P.M 2,5), вільготнасьці ды іншыя дапамагаюць сачыць за якасьцю паветра як унутры пакоя, так і на дварэ.
+Мы можам ацэньваць ня толькі ўнутранае, але і навакольнае асяродзьдзе, заўважаючы, як на наша здароўе і самаадчуваньне ўплывае ўсё, што нас атачае. Напрыклад, праграмы SunDay: Vitamin D \& UV Monitor або Dminder дапамогуць адсачыць сонечную актыўнасьць, час для загару і ўзровень вітаміну D. Падключаныя да смартфона датчыкі вуглякіслага газу (CO\textsubscript{2}), чысьціні паветра (P.M 2,5), вільготнасьці ды іншыя дапамагаюць сачыць за якасьцю паветра як унутры пакоя, так і на дварэ.
 
 \subsection*{Біямаркеры.}
 
@@ -171,7 +171,7 @@
 
 \emph{\textbf{Пячоначныя маркеры:} альбумін, білірубін агульны і зьвязаны, Алат, Асат, ГГТП.}
 
-\emph{\textbf{Вітаміны:} вітамін Д, вітамін В12 (галатранскабалямін), вітамін В9.}
+\emph{\textbf{Вітаміны:} вітамін D, вітамін B\textsubscript{12} (галатранскабалямін), вітамін B\textsubscript{9}.}
 
 \emph{\textbf{Мінэралы:} жалеза, цынк, магній, ёд, медзь, сэлен, фэрытын, цэруляплязьмін, калій, натрый, кальцый.}
 
@@ -219,7 +219,7 @@
 
 «Любая назіраная статыстычная заканамернасьць схільная да разбурэньня, як толькі на яе аказваецца ціск з~мэтай кіраваньня». Гэтае правіла з~эканомікі абвяшчае: калі мы ставім сабе мэтай дасягнуць нейкі паказьнік, то ранейшыя заканамернасьці, якія яго выкарыстоўваюць, перастаюць працаваць. \textbf{Інакш гэтае правіла можна сфармуляваць так: «Калі нейкі паказьнік становіцца мэтай, ён перастае быць добрым паказьнікам».}
 
-\emph{Калі арыентавацца на адзін паказьнік, ігнаруючы астатнія, гэта, хутчэй за ўсё, прывядзе да памылак. Нельга ацэньваць стан машыны па прабегу (лічыльнік лёгка скруціць), ня варта ацэньваць каханьне па колькасьці падарункаў, а~дзяцей~--- па прынесеных ацэнках. Біямаркеры~--- гэта добра, але яны павінны быць толькі падказкамі, а~ня нашымі мэтамі. Напрыклад, эпігенэтычны ўзрост можна адкаціць вітамінам Д, гармонам росту, вітамінамі В9 і В12, шэрагам прадуктаў (мяса птушкі), але ніводнае з~гэтых умяшаньняў не зьмяншае сьмяротнасьць і не падаўжае жыцьцё.}
+\emph{Калі арыентавацца на адзін паказьнік, ігнаруючы астатнія, гэта, хутчэй за ўсё, прывядзе да памылак. Нельга ацэньваць стан машыны па прабегу (лічыльнік лёгка скруціць), ня варта ацэньваць каханьне па колькасьці падарункаў, а~дзяцей~--- па прынесеных ацэнках. Біямаркеры~--- гэта добра, але яны павінны быць толькі падказкамі, а~ня нашымі мэтамі. Напрыклад, эпігенэтычны ўзрост можна адкаціць вітамінам Д, гармонам росту, вітамінамі B\textsubscript{9} і B\textsubscript{12}, шэрагам прадуктаў (мяса птушкі), але ніводнае з~гэтых умяшаньняў не зьмяншае сьмяротнасьць і не падаўжае жыцьцё.}
 
 Заўсёды важна трымаць фокус на «цьвёрдых» канчатковых пунктах. Калі мы ставім мэты ці ацэньваем прагрэс, вельмі карысна памятаць пра правіла Гудхарта, каб ня зьбіцца са шляху.
 
@@ -343,7 +343,7 @@
 
 \emph{\textbf{Здароўе}~--- гэта так крута, ажно можа выклікаць устойлівую залежнасьць, якая патрабавацьме павелічэньня дозы для большага задавальненьня. Рацыянальнасьць тады адсоўваецца на другі плян, галоўнае~--- атрымаць больш кайфу. Таму людзі бягуць усё большыя маратоны, плывуць бясконцыя дыстанцыі, спрабуюць усё даўжэй галадаць, імкнуцца браць усё большую вагу, зьвяртаюцца да рызыкоўных відаў спорту, нягледзячы на высокі траўматызм і рызыку сьмерці. Такія ЗЛЖ-залежнасьці ня маюць нічога агульнага са здароўем. Чалавек, які «зьняўся» з~наркотыкаў і «перасеў» на маратоны, толькі зьмяніў аб'ект залежнасьці, а~не акрыяў. Хоць грамадзкая шкода ад марафонаў, вядома, меншая, чым ад наркотыкаў.}
 
-\textbf{Зашмат карыснага~--- шкодна.} Напрыклад, фолевая кіслата. У высокіх дозах яна ўзмацняе праліфэрацыю клетак, што можа паскорыць атэрасклероз. І калі прадукты забясьпечваюць вам дастатковую колькасьць В9, то дадатковы прыём фолію не дадасьць карысьці, але можа павялічыць рызыку для здароўя. Гэта ж датычыцца і вітамінаў, проста прапіваць іх можа быць небясьпечна. Індывідуальны падыход~--- выяўленьне дэфіцытаў і карэкцыя іх. Дэфіцыты могуць узьнікаць з~розных прычынаў~--- нізкае ўтрыманьне вітамінаў або мінэралаў у~прадуктах (кепскі рацыён, бедная глеба), дрэннае ўсмоктваньне праз спалучэньне прадуктаў або захворваньняў (нізкая кіслотнасьць страўніка), генэтычныя асаблівасьці, якія перашкаджаюць засваеньню, падвышанае выдаткаваньне арганізмам. Таксама шкодная залішняя колькасьць вітамінаў В12, А, Е і шэрагу іншых. Гіпэрдозы вітаміну Д могуць справакаваць кальцыфікацыю крывяносных сасудаў.
+\textbf{Зашмат карыснага~--- шкодна.} Напрыклад, фолевая кіслата. У высокіх дозах яна ўзмацняе праліфэрацыю клетак, што можа паскорыць атэрасклероз. І калі прадукты забясьпечваюць вам дастатковую колькасьць B\textsubscript{9}, то дадатковы прыём фолію не дадасьць карысьці, але можа павялічыць рызыку для здароўя. Гэта ж датычыцца і вітамінаў, проста прапіваць іх можа быць небясьпечна. Індывідуальны падыход~--- выяўленьне дэфіцытаў і карэкцыя іх. Дэфіцыты могуць узьнікаць з~розных прычынаў~--- нізкае ўтрыманьне вітамінаў або мінэралаў у~прадуктах (кепскі рацыён, бедная глеба), дрэннае ўсмоктваньне праз спалучэньне прадуктаў або захворваньняў (нізкая кіслотнасьць страўніка), генэтычныя асаблівасьці, якія перашкаджаюць засваеньню, падвышанае выдаткаваньне арганізмам. Таксама шкодная залішняя колькасьць вітамінаў B\textsubscript{12}, А, Е і шэрагу іншых. Гіпэрдозы вітаміну D могуць справакаваць кальцыфікацыю крывяносных сасудаў.
 
 Напрыклад, пагаршаюць усмоктваньне жалеза з~прадуктаў і дадаткаў (танін гарбаты, какава, кава і інш.), фітаты (кашы, перапечкі і да т.~п.), фасфаты і кальцый (уся малочка), аксаляты і інш. Так, дадатковы прыём на працягу 10 дзён малака і сыра на 30--50\,\% зьнізіў засваеньне жалеза. А гарбата на 62\,\% зьніжае засваеньне жалеза ў~параўнаньні з~вадой. Паляпшаюць усмоктваньне жалеза: вітамін С ды іншыя арганічныя кіслоты, уключаючы цытрынавую, бурштынавую і інш., фруктоза, сарбіт, амінакіслоты (мэтыянін, цыстэін і інш.), «чыньнік жывёльнага бялку»: міяглабін + гемаглабін. Вітамін С~--- наймацнейшы чыньнік паляпшэньня ўсмоктваньня жалеза. Могуць нашкодзіць і дадаткі, напрыклад п'яце шмат цынку~--- ён блякуе засваеньне медзі, п'яце кальцый~--- ён зьніжае ўсмоктваньне жалеза.
 
@@ -351,7 +351,7 @@
 
 \textbf{Шкода ад солі?} Шкодны менавіта лішак солі, у~высокіх дозах, якія знаходзяцца ў~паўфабрыкатах, а~не ў~вашай сальніцы. Асабліва шкодная соль, калі ў~харчаваньні мала калію. А вось поўная адмова ад солі можа пагоршыць здароўе.
 
-\textbf{Шкода ад сонца?} Дэманізацыя сонца як прычыны раку скуры і фотастарэньня прывяла да эпідэміі дэфіцыту вітаміну Д. Сонца небясьпечнейшае для людзей са сьветлай скурай, у~сярэдзіне дня і летам, калі офісныя работнікі бяз звычкі да рэгулярнага загару ляжаць пад ім цэлы дзень, калі ў~родзе ёсьць выпадкі мэляномы. А вось поўнае пазьбяганьне сонца вельмі шкоднае для здароўя, і прыёмам вітаміну Д яго не кампенсуеш.
+\textbf{Шкода ад сонца?} Дэманізацыя сонца як прычыны раку скуры і фотастарэньня прывяла да эпідэміі дэфіцыту вітаміну D. Сонца небясьпечнейшае для людзей са сьветлай скурай, у~сярэдзіне дня і летам, калі офісныя работнікі бяз звычкі да рэгулярнага загару ляжаць пад ім цэлы дзень, калі ў~родзе ёсьць выпадкі мэляномы. А вось поўнае пазьбяганьне сонца вельмі шкоднае для здароўя, і прыёмам вітаміну D яго не кампенсуеш.
 
 \textbf{Шкода ад сацыяльных сетак?} Вядома, калі вы бязмэтна шныпарыце па іх. Карысна~--- калі камунікуеце і працуеце. Поўная адмова можа паглыбіць ізаляцыю і прывесьці да самоты.
 
@@ -602,7 +602,7 @@
 
 Людзі любяць хуткае вырашэньне ўсіх праблемаў са здароўем праз прыём дабавак і лекаў і ўвесь час знаходзяцца ў~пошуку «адной пігулкі ад усіх хваробаў». Як рыцары караля Артура шукалі чару Грааля, якая вылечвае ад хваробаў і дае неўміручасьць, так і сёньня людзі шукаюць у~сацсетках схэмы прыёму дадаткаў. Рашэньне практычна любой праблемы са здароўем можна зьвесьці да прыёму набору БАДаў. Проста як у~магічным рэцэпце: як узыдзе поўня, вазьмі тоўчаныя мышыныя языкі, сэрца шыбеніка і корань мандрагоры; а~цяпер гучыць: замоў дадатак 1, дадатак 2 і дадатак 3. \textbf{Пэрыядычна ў~шматлікіх людзей пачынаецца сапраўдны сьверб, маўляў, чаго б такога мне прапіць?}
 
-Абсалютная большасьць гэтых злучэньняў у~лепшым выпадку бескарысныя, а~іх прыём можа адцягваць чалавека ад сапраўды важных мерапрыемстваў. Лепш бы выдаткаваць гэтыя сілы на паляпшэньне харчаваньня або спорт. Бо зьвесткі пра карысьцт гэтых дабавак могуць быць атрыманыя на клеткавых культурах, на жывёлах і не пераносяцца на чалавека. Нават калі вы спрабуеце зьмяніць дадаткамі нейкі біяхімічны паказьнік, яго зьмена не заўсёды будзе гаварыць аб карысьці для здароўя. Таму навукоўцы дасьледуюць уплыў прэпаратаў ня толькі на «мяккія пункты» (г.~зн. прамежкавыя паказьнікі), але заўсёды~--- на «цьвёрдыя пункты» (працягласьць жыцьця і частасьць ускладненьняў). Напрыклад, зьніжэньне цынку пры дэпрэсіі адбываецца не празь яго дэфіцыту, а~празь пераразьмеркаваньне. Павышэньне гомацыстэіну можа быць і праз парушэньне работы нырак, а~не дэфіцыт вітамінаў В9 і В12.
+Абсалютная большасьць гэтых злучэньняў у~лепшым выпадку бескарысныя, а~іх прыём можа адцягваць чалавека ад сапраўды важных мерапрыемстваў. Лепш бы выдаткаваць гэтыя сілы на паляпшэньне харчаваньня або спорт. Бо зьвесткі пра карысьцт гэтых дабавак могуць быць атрыманыя на клеткавых культурах, на жывёлах і не пераносяцца на чалавека. Нават калі вы спрабуеце зьмяніць дадаткамі нейкі біяхімічны паказьнік, яго зьмена не заўсёды будзе гаварыць аб карысьці для здароўя. Таму навукоўцы дасьледуюць уплыў прэпаратаў ня толькі на «мяккія пункты» (г.~зн. прамежкавыя паказьнікі), але заўсёды~--- на «цьвёрдыя пункты» (працягласьць жыцьця і частасьць ускладненьняў). Напрыклад, зьніжэньне цынку пры дэпрэсіі адбываецца не празь яго дэфіцыту, а~празь пераразьмеркаваньне. Павышэньне гомацыстэіну можа быць і праз парушэньне работы нырак, а~не дэфіцыт вітамінаў B\textsubscript{9} і B\textsubscript{12}.
 
 Многія нават лекавыя прэпараты, якія паляпшаюць стан пацыентаў, у~выніку могуць павялічваць іх сьмяротнасьць: напрыклад, шэраг лекаў пры мігальнай арытміі. Бывае і так, што прэпараты, якія спачатку нават крыху пагаршаюць стан пацыентаў, напрыклад бэта-блякатары, у~выніку падаўжаюць ім жыцьцё. Таму так важна прытрымлівацца доказнай мэдыцыны замест таго, каб верыць сваім суб'ектыўным адчуваньням або чаканьням.
 
@@ -750,11 +750,11 @@
 
 Чаму для дасягненьня аднаго паказьніка трэба камбінаваць розныя падыходы? Так мы дасягаем мэты зь меншымі выдаткамі і меншай рызыкай пабочных эфэктаў. Напрыклад, для пахуданьня мы можам мардаваць сябе зьнясільвальнымі трэніроўкамі, але гэта складана і небясьпечна на пабочныя эфэкты. А вось калі мы дадамо выключэньне высокакалярыйных прадуктаў, датрыманьне рэжыму харчаваньня, павялічым колькасьць крокаў, будзем лепш высыпацца, прыбяром з~кухні гатовыя прадукты, пачнём мэдытаваць 10 хвілінаў у~дзень~--- насамрэч нават дзьве-тры меры зь пералічаных будуць высока эфэктыўныя і паскораць працэс скіду вагі.
 
-\textbf{«Каб нармалізаваць узровень вітаміну Д, часам дастаткова проста схуднець»}~--- такую фразу вырвалі з~кантэксту і зрабілі назвай інтэрвію ў~адной з~газэтаў, нягледзячы на мае пярэчаньні. Я сапраўды згадаў, што пры залішняй вазе часта назіраецца паніжаны ўзровень вітаміну Д. Больш за тое, у~людзей з~атлусьценьнем прыём дадаткаў вітаміну Д слаба ўплывае на яго ўзровень у~крыві ў~параўнаньні зь людзьмі са звычайнай масай цела. Куды ж сыходзіць вітамін? Рэч у~тым, што вітамін Д назапашваецца ў~тлушчавай тканцы. Гэта мае важнае прыстасоўвальнае значэньне, бо ў~зімовыя месяцы сонца ў~нас мала.
+\textbf{«Каб нармалізаваць узровень вітаміну D, часам дастаткова проста схуднець»}~--- такую фразу вырвалі з~кантэксту і зрабілі назвай інтэрвію ў~адной з~газэтаў, нягледзячы на мае пярэчаньні. Я сапраўды згадаў, што пры залішняй вазе часта назіраецца паніжаны ўзровень вітаміну D. Больш за тое, у~людзей з~атлусьценьнем прыём дадаткаў вітаміну D слаба ўплывае на яго ўзровень у~крыві ў~параўнаньні зь людзьмі са звычайнай масай цела. Куды ж сыходзіць вітамін? Рэч у~тым, што вітамін D назапашваецца ў~тлушчавай тканцы. Гэта мае важнае прыстасоўвальнае значэньне, бо ў~зімовыя месяцы сонца ў~нас мала.
 
-\textbf{Пры атлусьценьні гэта мае нэгатыўныя наступствы, бо зьніжэньне ліполізу~--- расшчапленьні тлушчу~--- прыводзіць да таго, што вітамін Д не трапляе з~тлушчу ў~кроў!} Нягледзячы на вялікія запасы, чалавек ня толькі ня можа выкарыстоўваць назапашаны вітамін Д, але яшчэ й слаба адказвае на прыём дадаткаў. Так, у~мужчыны масай 100 кг з~40\,\% тлушчу запасу вітаміну Д у~тлушчы хопіць на 2000 дзён з~улікам рэкамэндаванай сутачнай дозы. Гэта шасьцігадовы запас! Але ён сам пры гэтым можа пакутаваць ад дэфіцыту вітаміну Д. Навукоўцы адзначалі: чым вышэй узровень фізычнай актыўнасьці, тым вышэй узровень вітаміну Д, і сьпісвалі гэта на тое, што людзі, якія больш займаюцца, больш бываюць на сонцы. Але дасьледаваньні спартоўцаў, якія трэніраваліся ў~памяшканьнях, паказалі, што менавіта фізычная актыўнасьць павялічвае ўзровень вітаміну Д.
+\textbf{Пры атлусьценьні гэта мае нэгатыўныя наступствы, бо зьніжэньне ліполізу~--- расшчапленьні тлушчу~--- прыводзіць да таго, што вітамін D не трапляе з~тлушчу ў~кроў!} Нягледзячы на вялікія запасы, чалавек ня толькі ня можа выкарыстоўваць назапашаны вітамін D, але яшчэ й слаба адказвае на прыём дадаткаў. Так, у~мужчыны масай 100 кг з~40\,\% тлушчу запасу вітаміну D у~тлушчы хопіць на 2000 дзён з~улікам рэкамэндаванай сутачнай дозы. Гэта шасьцігадовы запас! Але ён сам пры гэтым можа пакутаваць ад дэфіцыту вітаміну D. Навукоўцы адзначалі: чым вышэй узровень фізычнай актыўнасьці, тым вышэй узровень вітаміну D, і сьпісвалі гэта на тое, што людзі, якія больш займаюцца, больш бываюць на сонцы. Але дасьледаваньні спартоўцаў, якія трэніраваліся ў~памяшканьнях, паказалі, што менавіта фізычная актыўнасьць павялічвае ўзровень вітаміну D.
 
-\textbf{Рэгулярныя трэніроўкі дазваляюць пазьбегнуць спаду ўзроўню вітаміну Д у~зімовыя месяцы.} Як гэта працуе? Фізычная актыўнасьць узмацняе ліполіз, мабілізацыя вітаміну Д прапарцыйная ліполізу і ўзроўню актывацыі бэта-адрэнэргічных рэцэптараў. Чым лепшая форма чалавека, чым больш трэніровак, тым вышэй узровень вітаміну Д. Узаемадзеяньне~--- гэта складаныя ланцужкі, дзе парушэньне або падзеньне аднаго з~элемэнтаў~--- як у~шэрагу костак даміно~--- можа прывесьці да незвычайных наступстваў.
+\textbf{Рэгулярныя трэніроўкі дазваляюць пазьбегнуць спаду ўзроўню вітаміну D у~зімовыя месяцы.} Як гэта працуе? Фізычная актыўнасьць узмацняе ліполіз, мабілізацыя вітаміну D прапарцыйная ліполізу і ўзроўню актывацыі бэта-адрэнэргічных рэцэптараў. Чым лепшая форма чалавека, чым больш трэніровак, тым вышэй узровень вітаміну D. Узаемадзеяньне~--- гэта складаныя ланцужкі, дзе парушэньне або падзеньне аднаго з~элемэнтаў~--- як у~шэрагу костак даміно~--- можа прывесьці да незвычайных наступстваў.
 
 Прывяду прыклад дзівоснага нітратнага цыклу: зь ежай да нас трапляюць харчовыя нітраты, часьцей за ўсё з~гароднінай і зелянінай (больш за 85\,\%), у~стрававальнай сыстэме яны з~дапамогай бактэрыяў ператвараюцца ў~нітрыты, зь якіх затым у~крыві можа ўтварацца аксід азоту. 
 
