--- a/willpower/chapter4.tex
+++ b/willpower/chapter4.tex
@@ -105,7 +105,7 @@
 
 \subsection*{Харчовы дэфіцыт\index{харчовы дэфіцыт}.} 
 
-Важнае значэньне мае і паўнавартаснасьць харчаваньня. Дэфіцыт вітамінаў і мінэралаў у~харчаваньні прыводзіць да разьвіцьця шматлікіх спадарожных праблемаў: дэфіцыт цынку~--- зьніжаны тэстастэрон, дэфіцыт жалеза~--- анэмія, дэфіцыт ёду~--- хваробы шчытавіцы, дэфіцыт В12~--- рызыка анэміі, дэмэнцыі і да т.~п. Менавіта таму абмежавальныя дыеты могуць прыводзіць да сур'ёзных пабочных эфэктаў. У асаблівай зоне рызыкі цяжарныя жанчыны, якія захапляюцца рознымі дыетамі, або дэфіцыт мінэралаў і вітамінаў можа прывесьці да сур'ёзнай шкоды для разьвіцьця дзіцяці.
+Важнае значэньне мае і паўнавартаснасьць харчаваньня. Дэфіцыт вітамінаў і мінэралаў у~харчаваньні прыводзіць да разьвіцьця шматлікіх спадарожных праблемаў: дэфіцыт цынку~--- зьніжаны тэстастэрон, дэфіцыт жалеза~--- анэмія, дэфіцыт ёду~--- хваробы шчытавіцы, дэфіцыт B\textsubscript{12}~--- рызыка анэміі, дэмэнцыі і да т.~п. Менавіта таму абмежавальныя дыеты могуць прыводзіць да сур'ёзных пабочных эфэктаў. У асаблівай зоне рызыкі цяжарныя жанчыны, якія захапляюцца рознымі дыетамі, або дэфіцыт мінэралаў і вітамінаў можа прывесьці да сур'ёзнай шкоды для разьвіцьця дзіцяці.
 
 \paragraph{Ежа зьмяняе актыўнасьць нашых генаў, праз мэханізмы эпігенэтыкі\index{эпігенэтыка} ўплываючы на здароўе дзяцей і ўнукаў, на рызыку хваробаў у~іх.} Многія парушэньні здароўя могуць уплываць на будучых дзяцей ускоснымі шляхамі. Напрыклад, пераяданьне можа выклікаць інсулінарэзыстэнтнасьць і полікістоз яечнікаў, што павялічвае ўзровень андрагенаў у~жанчыны, а~гэта, у~сваю чаргу, уплывае на мозг плода і павялічвае рызыку аўтызму.
 
@@ -475,7 +475,7 @@
 
 \section{Бялкі}
 
-Бялкі адначасова маюць і карысныя і небясьпечныя ўласьцівасьці, таму важна правільна выкарыстоўваць іх у~дыеце. З аднаго боку, вэгетарыянскія дыеты і абмежаваньне бялку, некаторых амінакіслотаў зьмяншаюць рызыкі хваробаў і падаўжаюць жыцьцё. Але дэфіцыт бялку можа правакаваць пераяданьне і атлусьценьне\index{атлусьценьне}, а~адмова ад бялковых прадуктаў вядзе да дэфіцыту вітаміну В12, жалеза, цынку і да т.~п.
+Бялкі адначасова маюць і карысныя і небясьпечныя ўласьцівасьці, таму важна правільна выкарыстоўваць іх у~дыеце. З аднаго боку, вэгетарыянскія дыеты і абмежаваньне бялку, некаторых амінакіслотаў зьмяншаюць рызыкі хваробаў і падаўжаюць жыцьцё. Але дэфіцыт бялку можа правакаваць пераяданьне і атлусьценьне\index{атлусьценьне}, а~адмова ад бялковых прадуктаў вядзе да дэфіцыту вітаміну B\textsubscript{12}, жалеза, цынку і да т.~п.
 
 \paragraph{Ключавыя падыходы да бялковых прадуктаў:}
 \begin{itemize}
