--- a/willpower/chapter7.tex
+++ b/willpower/chapter7.tex
@@ -196,7 +196,7 @@
 
 Пэрыфэрычныя рэсурсы энэргічнасьці~--- гэта ўсё, што знаходзіцца за межамі чарапной каробкі, гаворка як пра ўзьдзеяньне на цела, так і пра біяхімічныя аспэкты работы арганізма. Для таго каб выявіць магчымыя прычыны зьніжэньня энэргічнасьці на ўзроўні гармонаў і мэтабалізму, трэба правесьці шэраг дасьледаваньняў.
 
-Парушэньні працы шчытавіцы (аналіз ТТГ, вольнага Т3), зьніжэньне тэстастэрону, павышэньне запаленьня (С-рэактыўны бялок і ІЛ-6), нізкі ўзровень жалеза (фэрытын), інсулінарэзістэнтнасьць і высокі глікаваны гемаглабін, лептынарэзыстэнтнасьць, высокі гомацыстэін (і нізкія ўзроўні В9 і В12) могуць прыводзіць да зьніжэньня энэргічнасьці.
+Парушэньні працы шчытавіцы (аналіз ТТГ, вольнага Т3), зьніжэньне тэстастэрону, павышэньне запаленьня (С-рэактыўны бялок і ІЛ-6), нізкі ўзровень жалеза (фэрытын), інсулінарэзістэнтнасьць і высокі глікаваны гемаглабін, лептынарэзыстэнтнасьць, высокі гомацыстэін (і нізкія ўзроўні B\textsubscript{9} і B\textsubscript{12}) могуць прыводзіць да зьніжэньня энэргічнасьці.
 
 Базавая нармалізацыя ладу жыцьця таксама вельмі важная. Напрыклад, гіпадынамія зьніжае энэргічнасьць, а~гармон голаду грэлін, наадварот, павялічвае і ўзровень дафаміну, і энэргічнасьць. Ясная рэч, бяз добрага сну тут не абысьціся.
 
@@ -576,7 +576,7 @@
 
 Аўтагенная трэніроўка. Гэта просты і эфэктыўны спосаб рэляксацыі, заснаваны на візуалізацыі. Пачынаючы з~ручыцаў і ступакоў, далей рухаючыся па ўсім целе, мы па чарзе ўяўляем у~іх «цяжар»~--- на расслабленьне цяглічнага тонусу, і «цяпло»~--- на пашырэньне сасудаў скурнага покрыва. Візуалізацыя прахалоды на лобе можа дапамагчы ў~аслабленьні галаўнога болю.
 
-Дыхальныя практыкі. Пры стрэсе ў~нас запускаецца мэханізм пачашчэньня дыханьня. Гэта адаптыўны мэханізм, гатоўнасьць арганізма да «бегчы-біцца». У чым фізыялягічны мэханізм гэтай зьявы? Гіпэрвэнтыляцыя~--- гэта прыстасоўвальны эвалюцыйны стрэсавы мэханізм. Пры зьніжэньні СО2 павялічваецца ўзровень ўнутрыклеткавага кальцыю. Гэта актывуе скарачальныя ўласьцівасьці ўсіх цяглічных тканак, узмацняе цяглічную напругу, павялічвае адчувальнасьць рэцэптараў да адрэналіну. Таму павольнае дыханьне рэальна расслабляе, зьніжаючы цяглічны тонус і адчувальнасьць да адрэналіну.
+Дыхальныя практыкі. Пры стрэсе ў~нас запускаецца мэханізм пачашчэньня дыханьня. Гэта адаптыўны мэханізм, гатоўнасьць арганізма да «бегчы-біцца». У чым фізыялягічны мэханізм гэтай зьявы? Гіпэрвэнтыляцыя~--- гэта прыстасоўвальны эвалюцыйны стрэсавы мэханізм. Пры зьніжэньні CO\textsubscript{2} павялічваецца ўзровень ўнутрыклеткавага кальцыю. Гэта актывуе скарачальныя ўласьцівасьці ўсіх цяглічных тканак, узмацняе цяглічную напругу, павялічвае адчувальнасьць рэцэптараў да адрэналіну. Таму павольнае дыханьне рэальна расслабляе, зьніжаючы цяглічны тонус і адчувальнасьць да адрэналіну.
 
 Гіпэрвэнтыляцыя вядзе да павелічэньня скарачальнай актыўнасьці і шкілетных цягліцаў, і гладкіх цягліцаў сасудаў. Але самае важнае~--- гэта вымываньне вуглякіслага газу з~крыві, што прыводзіць да звужэньня крывяносных сасудаў у~галаўным мозгу і выклікае зьніжэньне крывацёку. Гэта можа прыводзіць да галавакружэньня, звужэньня прытомнасьці, зьніжэньня ўвагі, паколваньня, здранцьвеньня, спазмаў, часам выяўляецца як адчуваньне здушваньня ў~грудзях, як ком у~горле і да т.~п. 
 
